packages/core/src/generated/grammar/grammar/intentlangParser.ts
// Generated from ./grammar/intentlang.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from "antlr4ts/atn/ATN.js";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer.js";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException.js";
import { NotNull } from "antlr4ts/Decorators.js";
import { NoViableAltException } from "antlr4ts/NoViableAltException.js";
import { Override } from "antlr4ts/Decorators.js";
import { Parser } from "antlr4ts/Parser.js";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext.js";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator.js";
import type { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener.js";
import type { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor.js";
import { RecognitionException } from "antlr4ts/RecognitionException.js";
import { RuleContext } from "antlr4ts/RuleContext.js";
//import { RuleVersion } from "antlr4ts/RuleVersion.js";
import type { TerminalNode } from "antlr4ts/tree/TerminalNode.js";
import { Token } from "antlr4ts/Token.js";
import type { TokenStream } from "antlr4ts/TokenStream.js";
import type { Vocabulary } from "antlr4ts/Vocabulary.js";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl.js";

import * as Utils from "antlr4ts/misc/Utils.js";
import type { intentlangListener } from "./intentlangListener.js";
import type { intentlangVisitor } from "./intentlangVisitor.js";

export class intentlangParser extends Parser {
  public static readonly INTENT = 1;
  public static readonly USES = 2;
  public static readonly TYPES = 3;
  public static readonly TAGS = 4;
  public static readonly TYPEKW = 5;
  public static readonly EFFECT = 6;
  public static readonly FN = 7;
  public static readonly TEST = 8;
  public static readonly RETURN = 9;
  public static readonly LET = 10;
  public static readonly AS = 11;
  public static readonly BOOL = 12;
  public static readonly IDENT = 13;
  public static readonly STRING = 14;
  public static readonly FLOAT = 15;
  public static readonly INT = 16;
  public static readonly LBRACE = 17;
  public static readonly RBRACE = 18;
  public static readonly LPAREN = 19;
  public static readonly RPAREN = 20;
  public static readonly LBRACK = 21;
  public static readonly RBRACK = 22;
  public static readonly COMMA = 23;
  public static readonly SEMI = 24;
  public static readonly COLON = 25;
  public static readonly DOT = 26;
  public static readonly LT = 27;
  public static readonly GT = 28;
  public static readonly LTE = 29;
  public static readonly GTE = 30;
  public static readonly EQEQ = 31;
  public static readonly BANGEQ = 32;
  public static readonly ASSIGN = 33;
  public static readonly PLUS = 34;
  public static readonly MINUS = 35;
  public static readonly STAR = 36;
  public static readonly SLASH = 37;
  public static readonly PERCENT = 38;
  public static readonly BANG = 39;
  public static readonly OR = 40;
  public static readonly OROR = 41;
  public static readonly ANDAND = 42;
  public static readonly LINE_COMMENT = 43;
  public static readonly BLOCK_COMMENT = 44;
  public static readonly WS = 45;
  public static readonly RULE_file = 0;
  public static readonly RULE_program = 1;
  public static readonly RULE_intentSection = 2;
  public static readonly RULE_tagList = 3;
  public static readonly RULE_usesSection = 4;
  public static readonly RULE_typesSection = 5;
  public static readonly RULE_useDecl = 6;
  public static readonly RULE_typeDecl = 7;
  public static readonly RULE_typeExpr = 8;
  public static readonly RULE_unionType = 9;
  public static readonly RULE_typeAtom = 10;
  public static readonly RULE_namedType = 11;
  public static readonly RULE_recordType = 12;
  public static readonly RULE_field = 13;
  public static readonly RULE_tupleType = 14;
  public static readonly RULE_literalType = 15;
  public static readonly RULE_item = 16;
  public static readonly RULE_funcDecl = 17;
  public static readonly RULE_effectDecl = 18;
  public static readonly RULE_testDecl = 19;
  public static readonly RULE_params = 20;
  public static readonly RULE_param = 21;
  public static readonly RULE_block = 22;
  public static readonly RULE_stmt = 23;
  public static readonly RULE_expr = 24;
  public static readonly RULE_assignmentExpr = 25;
  public static readonly RULE_orExpr = 26;
  public static readonly RULE_andExpr = 27;
  public static readonly RULE_equalityExpr = 28;
  public static readonly RULE_relationalExpr = 29;
  public static readonly RULE_additiveExpr = 30;
  public static readonly RULE_multiplicativeExpr = 31;
  public static readonly RULE_unaryExpr = 32;
  public static readonly RULE_primaryExpr = 33;
  public static readonly RULE_literal = 34;
  public static readonly RULE_stringLiteral = 35;
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    "file",
    "program",
    "intentSection",
    "tagList",
    "usesSection",
    "typesSection",
    "useDecl",
    "typeDecl",
    "typeExpr",
    "unionType",
    "typeAtom",
    "namedType",
    "recordType",
    "field",
    "tupleType",
    "literalType",
    "item",
    "funcDecl",
    "effectDecl",
    "testDecl",
    "params",
    "param",
    "block",
    "stmt",
    "expr",
    "assignmentExpr",
    "orExpr",
    "andExpr",
    "equalityExpr",
    "relationalExpr",
    "additiveExpr",
    "multiplicativeExpr",
    "unaryExpr",
    "primaryExpr",
    "literal",
    "stringLiteral",
  ];

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    "'intent'",
    "'uses'",
    "'types'",
    "'tags'",
    "'type'",
    "'effect'",
    "'fn'",
    "'test'",
    "'return'",
    "'let'",
    "'as'",
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    "'{'",
    "'}'",
    "'('",
    "')'",
    "'['",
    "']'",
    "','",
    "';'",
    "':'",
    "'.'",
    "'<'",
    "'>'",
    "'<='",
    "'>='",
    "'=='",
    "'!='",
    "'='",
    "'+'",
    "'-'",
    "'*'",
    "'/'",
    "'%'",
    "'!'",
    "'|'",
    "'||'",
    "'&&'",
  ];
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    "INTENT",
    "USES",
    "TYPES",
    "TAGS",
    "TYPEKW",
    "EFFECT",
    "FN",
    "TEST",
    "RETURN",
    "LET",
    "AS",
    "BOOL",
    "IDENT",
    "STRING",
    "FLOAT",
    "INT",
    "LBRACE",
    "RBRACE",
    "LPAREN",
    "RPAREN",
    "LBRACK",
    "RBRACK",
    "COMMA",
    "SEMI",
    "COLON",
    "DOT",
    "LT",
    "GT",
    "LTE",
    "GTE",
    "EQEQ",
    "BANGEQ",
    "ASSIGN",
    "PLUS",
    "MINUS",
    "STAR",
    "SLASH",
    "PERCENT",
    "BANG",
    "OR",
    "OROR",
    "ANDAND",
    "LINE_COMMENT",
    "BLOCK_COMMENT",
    "WS",
  ];
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    intentlangParser._LITERAL_NAMES,
    intentlangParser._SYMBOLIC_NAMES,
    [],
  );

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return intentlangParser.VOCABULARY;
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return "intentlang.g4";
  }

  // @Override
  public get ruleNames(): string[] {
    return intentlangParser.ruleNames;
  }

  // @Override
  public get serializedATN(): string {
    return intentlangParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(intentlangParser._ATN, this);
  }
  // @RuleVersion(0)
  public file(): FileContext {
    let _localctx: FileContext = new FileContext(this._ctx, this.state);
    this.enterRule(_localctx, 0, intentlangParser.RULE_file);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 72;
        this.program();
        this.state = 73;
        this.match(intentlangParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public program(): ProgramContext {
    let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
    this.enterRule(_localctx, 2, intentlangParser.RULE_program);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 76;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.INTENT) {
          {
            this.state = 75;
            this.intentSection();
          }
        }

        this.state = 79;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.USES) {
          {
            this.state = 78;
            this.usesSection();
          }
        }

        this.state = 82;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.TYPES) {
          {
            this.state = 81;
            this.typesSection();
          }
        }

        this.state = 87;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (
          ((_la & ~0x1f) === 0 &&
            ((1 << _la) &
              ((1 << intentlangParser.EFFECT) |
                (1 << intentlangParser.FN) |
                (1 << intentlangParser.TEST) |
                (1 << intentlangParser.RETURN) |
                (1 << intentlangParser.LET) |
                (1 << intentlangParser.BOOL) |
                (1 << intentlangParser.IDENT) |
                (1 << intentlangParser.STRING) |
                (1 << intentlangParser.FLOAT) |
                (1 << intentlangParser.INT) |
                (1 << intentlangParser.LBRACE) |
                (1 << intentlangParser.LPAREN))) !==
              0) ||
          _la === intentlangParser.MINUS ||
          _la === intentlangParser.BANG
        ) {
          {
            {
              this.state = 84;
              this.item();
            }
          }
          this.state = 89;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public intentSection(): IntentSectionContext {
    let _localctx: IntentSectionContext = new IntentSectionContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 4, intentlangParser.RULE_intentSection);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 90;
        this.match(intentlangParser.INTENT);
        this.state = 91;
        this.stringLiteral();
        this.state = 92;
        this.match(intentlangParser.TAGS);
        this.state = 93;
        this.tagList();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public tagList(): TagListContext {
    let _localctx: TagListContext = new TagListContext(this._ctx, this.state);
    this.enterRule(_localctx, 6, intentlangParser.RULE_tagList);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 95;
        this.match(intentlangParser.LBRACK);
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.STRING) {
          {
            this.state = 96;
            this.stringLiteral();
            this.state = 101;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === intentlangParser.COMMA) {
              {
                {
                  this.state = 97;
                  this.match(intentlangParser.COMMA);
                  this.state = 98;
                  this.stringLiteral();
                }
              }
              this.state = 103;
              this._errHandler.sync(this);
              _la = this._input.LA(1);
            }
          }
        }

        this.state = 106;
        this.match(intentlangParser.RBRACK);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public usesSection(): UsesSectionContext {
    let _localctx: UsesSectionContext = new UsesSectionContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 8, intentlangParser.RULE_usesSection);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 108;
        this.match(intentlangParser.USES);
        this.state = 109;
        this.match(intentlangParser.LBRACE);
        this.state = 113;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === intentlangParser.IDENT) {
          {
            {
              this.state = 110;
              this.useDecl();
            }
          }
          this.state = 115;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 116;
        this.match(intentlangParser.RBRACE);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public typesSection(): TypesSectionContext {
    let _localctx: TypesSectionContext = new TypesSectionContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 10, intentlangParser.RULE_typesSection);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 118;
        this.match(intentlangParser.TYPES);
        this.state = 119;
        this.match(intentlangParser.LBRACE);
        this.state = 123;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === intentlangParser.TYPEKW) {
          {
            {
              this.state = 120;
              this.typeDecl();
            }
          }
          this.state = 125;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 126;
        this.match(intentlangParser.RBRACE);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public useDecl(): UseDeclContext {
    let _localctx: UseDeclContext = new UseDeclContext(this._ctx, this.state);
    this.enterRule(_localctx, 12, intentlangParser.RULE_useDecl);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 128;
        this.match(intentlangParser.IDENT);
        this.state = 131;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.AS) {
          {
            this.state = 129;
            this.match(intentlangParser.AS);
            this.state = 130;
            this.match(intentlangParser.IDENT);
          }
        }

        this.state = 135;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.COLON) {
          {
            this.state = 133;
            this.match(intentlangParser.COLON);
            this.state = 134;
            this.match(intentlangParser.IDENT);
          }
        }

        this.state = 139;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.LBRACE) {
          {
            this.state = 137;
            this.match(intentlangParser.LBRACE);
            this.state = 138;
            this.match(intentlangParser.RBRACE);
          }
        }

        this.state = 142;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.SEMI) {
          {
            this.state = 141;
            this.match(intentlangParser.SEMI);
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public typeDecl(): TypeDeclContext {
    let _localctx: TypeDeclContext = new TypeDeclContext(this._ctx, this.state);
    this.enterRule(_localctx, 14, intentlangParser.RULE_typeDecl);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 144;
        this.match(intentlangParser.TYPEKW);
        this.state = 145;
        this.match(intentlangParser.IDENT);
        this.state = 146;
        this.match(intentlangParser.ASSIGN);
        this.state = 147;
        this.typeExpr();
        this.state = 149;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.SEMI) {
          {
            this.state = 148;
            this.match(intentlangParser.SEMI);
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public typeExpr(): TypeExprContext {
    let _localctx: TypeExprContext = new TypeExprContext(this._ctx, this.state);
    this.enterRule(_localctx, 16, intentlangParser.RULE_typeExpr);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 151;
        this.unionType();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public unionType(): UnionTypeContext {
    let _localctx: UnionTypeContext = new UnionTypeContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 18, intentlangParser.RULE_unionType);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 153;
        this.typeAtom();
        this.state = 158;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === intentlangParser.OR) {
          {
            {
              this.state = 154;
              this.match(intentlangParser.OR);
              this.state = 155;
              this.typeAtom();
            }
          }
          this.state = 160;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public typeAtom(): TypeAtomContext {
    let _localctx: TypeAtomContext = new TypeAtomContext(this._ctx, this.state);
    this.enterRule(_localctx, 20, intentlangParser.RULE_typeAtom);
    try {
      this.state = 169;
      this._errHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this._input, 14, this._ctx)) {
        case 1:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 161;
            this.namedType();
          }
          break;

        case 2:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 162;
            this.literalType();
          }
          break;

        case 3:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 163;
            this.recordType();
          }
          break;

        case 4:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 164;
            this.tupleType();
          }
          break;

        case 5:
          this.enterOuterAlt(_localctx, 5);
          {
            this.state = 165;
            this.match(intentlangParser.LPAREN);
            this.state = 166;
            this.typeExpr();
            this.state = 167;
            this.match(intentlangParser.RPAREN);
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public namedType(): NamedTypeContext {
    let _localctx: NamedTypeContext = new NamedTypeContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 22, intentlangParser.RULE_namedType);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 171;
        this.match(intentlangParser.IDENT);
        this.state = 183;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.LT) {
          {
            this.state = 172;
            this.match(intentlangParser.LT);
            this.state = 173;
            this.typeExpr();
            this.state = 178;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === intentlangParser.COMMA) {
              {
                {
                  this.state = 174;
                  this.match(intentlangParser.COMMA);
                  this.state = 175;
                  this.typeExpr();
                }
              }
              this.state = 180;
              this._errHandler.sync(this);
              _la = this._input.LA(1);
            }
            this.state = 181;
            this.match(intentlangParser.GT);
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public recordType(): RecordTypeContext {
    let _localctx: RecordTypeContext = new RecordTypeContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 24, intentlangParser.RULE_recordType);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 185;
        this.match(intentlangParser.LBRACE);
        this.state = 186;
        this.field();
        this.state = 191;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === intentlangParser.COMMA) {
          {
            {
              this.state = 187;
              this.match(intentlangParser.COMMA);
              this.state = 188;
              this.field();
            }
          }
          this.state = 193;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 194;
        this.match(intentlangParser.RBRACE);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public field(): FieldContext {
    let _localctx: FieldContext = new FieldContext(this._ctx, this.state);
    this.enterRule(_localctx, 26, intentlangParser.RULE_field);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 196;
        this.match(intentlangParser.IDENT);
        this.state = 197;
        this.match(intentlangParser.COLON);
        this.state = 198;
        this.typeExpr();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public tupleType(): TupleTypeContext {
    let _localctx: TupleTypeContext = new TupleTypeContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 28, intentlangParser.RULE_tupleType);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 200;
        this.match(intentlangParser.LPAREN);
        this.state = 201;
        this.typeExpr();
        this.state = 204;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
          {
            {
              this.state = 202;
              this.match(intentlangParser.COMMA);
              this.state = 203;
              this.typeExpr();
            }
          }
          this.state = 206;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        } while (_la === intentlangParser.COMMA);
        this.state = 208;
        this.match(intentlangParser.RPAREN);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public literalType(): LiteralTypeContext {
    let _localctx: LiteralTypeContext = new LiteralTypeContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 30, intentlangParser.RULE_literalType);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 210;
        _la = this._input.LA(1);
        if (
          !(
            (_la & ~0x1f) === 0 &&
            ((1 << _la) &
              ((1 << intentlangParser.BOOL) |
                (1 << intentlangParser.STRING) |
                (1 << intentlangParser.FLOAT) |
                (1 << intentlangParser.INT))) !==
              0
          )
        ) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public item(): ItemContext {
    let _localctx: ItemContext = new ItemContext(this._ctx, this.state);
    this.enterRule(_localctx, 32, intentlangParser.RULE_item);
    try {
      this.state = 216;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case intentlangParser.FN:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 212;
            this.funcDecl();
          }
          break;
        case intentlangParser.EFFECT:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 213;
            this.effectDecl();
          }
          break;
        case intentlangParser.TEST:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 214;
            this.testDecl();
          }
          break;
        case intentlangParser.RETURN:
        case intentlangParser.LET:
        case intentlangParser.BOOL:
        case intentlangParser.IDENT:
        case intentlangParser.STRING:
        case intentlangParser.FLOAT:
        case intentlangParser.INT:
        case intentlangParser.LBRACE:
        case intentlangParser.LPAREN:
        case intentlangParser.MINUS:
        case intentlangParser.BANG:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 215;
            this.stmt();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public funcDecl(): FuncDeclContext {
    let _localctx: FuncDeclContext = new FuncDeclContext(this._ctx, this.state);
    this.enterRule(_localctx, 34, intentlangParser.RULE_funcDecl);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 218;
        this.match(intentlangParser.FN);
        this.state = 219;
        this.match(intentlangParser.IDENT);
        this.state = 220;
        this.match(intentlangParser.LPAREN);
        this.state = 222;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.IDENT) {
          {
            this.state = 221;
            this.params();
          }
        }

        this.state = 224;
        this.match(intentlangParser.RPAREN);
        this.state = 227;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === intentlangParser.COLON) {
          {
            this.state = 225;
            this.match(intentlangParser.COLON);
            this.state = 226;
            this.typeExpr();
          }
        }
